# YuanBan

./: .gitignore  README.md  package.json  迭代变更清单.md  鼋伴伴_三端原型设计沉淀总结_2026-05-24.docx
docs/: api-integration-checklist.md  backend-infra-summary-2026-05-24.md  community-mobile-ui-summary-2026-05-24.md  daily-summary-2026-05-25.md  deploy-aliyun.md  deploy-bt-panel.md  deploy-demo.md  deploy-status-2026-05-26.md  deploy-wuyeni-cn.md  e2e-acceptance.md  family-mobile-ui-summary-2026-05-24.md  mobile-optimization-api-summary-2026-05-29.md  mp-weixin-setup.md  mqtt-protocol.md  tech-stack-decision.md  ui-interaction-typography-upgrade-summary-2026-05-30.md  yuanbanban-product-plan.md
infra/: .env.example  .env.production.example  README.md  docker-compose.prod.yml  docker-compose.yml
scripts/: serve-h5.py  (+6 more)
services/api/: .env.example  Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml
services/api/alembic/: env.py
services/api/alembic/versions/: 001_initial.py  002_auth_and_demo_tables.py
services/api/app/: __init__.py  dev_setup.py  main.py  seed.py
services/api/app/core/: config.py  database.py  deps.py  redis_client.py  security.py
services/api/app/data/: demo_content.py
services/api/app/models/: __init__.py  entities.py
services/api/app/mqtt/: subscriber.py
services/api/app/routers/: api.py  auth.py  community.py  companion.py  events.py  family.py  simulator.py
services/api/app/schemas/: api.py  auth.py
services/api/app/services/: alert_service.py  companion_ai_service.py  elder_helpers.py  event_bus.py
services/api/scripts/: start-local.ps1
(+158 files in other folders)
